# FeiSync

./: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  feisync.api_server.json  feisync.security.json  feisync.tenants.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: base.css
src/components/: GroupView.vue  TenantDialog.vue
src/router/: index.ts
src/stores/: explorerStore.ts  groupStore.ts  securityStore.ts  taskStore.ts  tenantStore.ts  transferStore.ts  uiStore.ts
src/utils/: cron.ts
src/views/: AboutView.vue  DashboardView.vue  ExplorerView.vue  HomeView.vue  LogsView.vue  OpenAPIView.vue  SettingsView.vue  TasksView.vue  TenantView.vue  TransferView.vue
