[package]
name = "feisync"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.3", features = ["tray-icon"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
parking_lot = "0.12"
base64 = "0.21"
sha2 = "0.10"
rfd = "0.14"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch = "0.2"
objc = "0.2"
